@@ -1716,6 +1716,39 @@ argument_list|)
 throw|;
 block|}
 block|}
+else|else
+block|{
+if|if
+condition|(
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"partialResults"
+argument_list|)
+operator|==
+literal|null
+condition|)
+block|{
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|add
+argument_list|(
+literal|"partialResults"
+argument_list|,
+name|Boolean
+operator|.
+name|TRUE
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 name|rb
 operator|.
