@@ -838,6 +838,40 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|rb
+operator|.
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"partialResults"
+argument_list|)
+operator|==
+literal|null
+condition|)
+block|{
+name|rb
+operator|.
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|add
+argument_list|(
+literal|"partialResults"
+argument_list|,
+name|Boolean
+operator|.
+name|TRUE
+argument_list|)
+expr_stmt|;
+block|}
 continue|continue;
 comment|// continue if there was an error and we're tolerant.
 block|}
