@@ -3615,6 +3615,25 @@ expr_stmt|;
 block|}
 else|else
 block|{
+name|assertEquals
+argument_list|(
+literal|"Expected to find the partialResults header set if a shard is down"
+argument_list|,
+name|Boolean
+operator|.
+name|TRUE
+argument_list|,
+name|rsp
+operator|.
+name|getHeader
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"partialResults"
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|assertTrue
 argument_list|(
 literal|"Expected to find error in the down shard info"
@@ -3644,6 +3663,42 @@ name|found
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Override
+DECL|method|validateControlData
+specifier|public
+name|void
+name|validateControlData
+parameter_list|(
+name|QueryResponse
+name|control
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|super
+operator|.
+name|validateControlData
+argument_list|(
+name|control
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+literal|"Expected the partialResults header to be null"
+argument_list|,
+name|control
+operator|.
+name|getHeader
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"partialResults"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
